remove API class