@@ -106,8 +106,8 @@
     </dependencies>
 
     <properties>
-        <maven.compiler.source>14.0.2</maven.compiler.source>
-        <maven.compiler.target>13</maven.compiler.target>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
 
     </properties>
 
@@ -122,7 +122,10 @@
                 <configuration>
                     <source>17</source>
                     <target>17</target>
-                    <!--                    <compilerArgs>&#45;&#45;enable-preview</compilerArgs>-->
+
+                    <compilerArgs>
+                        <arg>--enable-preview</arg>
+                    </compilerArgs>
                 </configuration>
             </plugin>
 
@@ -155,6 +158,14 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.0.0-M5</version>
+                <configuration>
+
+                    <argLine>--enable-preview</argLine>
+                    <useUnlimitedThreads>true</useUnlimitedThreads>
+                    <parallel>all</parallel>
+                    <forkCount>4</forkCount>
+                    <reuseForks>true</reuseForks>
+                </configuration>
             </plugin>
 
         </plugins>
